Refactored the code to encpsulate the data for the comparator